fix(UI): Fixes hamburger menu icon alignment (#8927)

--- a/app/scripts/modules/core/src/header/SpinnakerHeader.css
+++ b/app/scripts/modules/core/src/header/SpinnakerHeader.css
@@ -11,6 +11,8 @@
 }
 
 .spinnaker-header .navbar-header .navbar-menu-icon {
+  display: flex;
+  justify-content: center;
   min-width: 24px;
   cursor: pointer;
   width: 60px;
